sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var swapped:Boolean;
      ^AlgBubbleSort1:3: error: local variables must be initialized
  var swapped:Boolean;
      ^