sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var swapped:Boolean;
  
  do {
    swapped = false;
    for (i <- 0 to getValueCount()-2) {
      if (isSmaller(i+1, i)) {
        swap(i, i+1);
        swapped = true;
      }
    }
  } while (swapped);
}